# OpenGL_FPS

./: .gitignore  4MBGameJam.sln  CMakeLists.txt  OpenGL_FPS.sln  README.md  setup.txt
4MBGameJam/: 4MBGameJam.vcxproj
4MBGameJam/src/: Application.h  Shader.cpp  Util.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
4MBGameJam/src/trash/: Camera.h  Component.h  Entity.h  Mesh.h  Renderer.cpp  Renderer.h  Scene.h  Square.h  lazyfoo.cpp
OpenGL_FPS/: OpenGL_FPS.vcxproj  OpenGL_FPS.vcxproj.filters
OpenGL_FPS/res/shader/: 3D.shader  Basic.shader  Texture.shader
OpenGL_FPS/src/: Application.cpp  Application.h  Box.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Collidable.h  Entity.cpp  Entity.h  IndexBuffer.cpp  IndexBuffer.h  Player.cpp  Player.h  Raycast.cpp  Raycast.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Setting.cpp  Setting.h  Shader.cpp  Shader.h  Square.h  StateBase.cpp  StateBase.h  StateGame.cpp  StateGame.h  StateManager.cpp  StateManager.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp
OpenGL_FPS/src/Entity/: Entity.h
OpenGL_FPS/src/Entity/Component/: Camera.h  Components.h  Player.cpp  Player.h  Raycast.cpp  Raycast.h  Transform.h
OpenGL_FPS/src/OpenGL/: Mesh.h  VertexArray.cpp
OpenGL_FPS/src/Renderer/: Renderer.h  Renderer2D.cpp  Renderer2D.h
OpenGL_FPS/src/Renderer/Primitive/: Plane.cpp  Plane.h
OpenGL_FPS/src/Resource/: Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  Setting.cpp  Shader.h  Texture2D.cpp
OpenGL_FPS/src/State/: BaseState.cpp  BaseState.h  GameState.cpp  GameState.h  StateManager.cpp
include/: Application.h  Util.h
include/ECS/: Entity.h
include/ECS/Component/: Camera.h  Light.h  Player.h  Renderable.h
include/OpenGL/: Buffer.h  Mesh.h  VertexArray.h  VertexBufferLayout.h
include/Renderer/: Renderer.h
include/Renderer/Primitive/: Box.h
include/Resource/: Model.h  Setting.h
include/State/: BaseState.h  GameState.h  StateManager.h
res/map/: simple_map.txt
res/shader/: Basic.shader
src/: Application.cpp  CMakeLists.txt
src/ECS/: CMakeLists.txt
src/ECS/Component/: Player.cpp  Raycast.cpp
src/OpenGL/: Buffer.cpp  CMakeLists.txt  Mesh.cpp  Mesh.cpp~HEAD  VertexBufferLayout.cpp
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.cpp~HEAD
src/Renderer/Primitive/: Plane.cpp
src/Resource/: CMakeLists.txt  ResourceManager.cpp  Setting.cpp  Shader.cpp
src/State/: CMakeLists.txt  GameState.cpp
src/_stb/: stb.cpp
